# FORCMAKE

CMAKETRY_1/srcroot/: CMakeLists.txt  add.cpp  main.cpp
CMAKETRY_2/srcroot/: CMakeLists.txt  main.cpp
CMAKETRY_2/srcroot/add_sub/: CMakeLists.txt  add.h  sub.cpp  sub.h
Chat/: CMakeLists.txt  README.md  autobuild.sh
Chat/include/: public.hpp
Chat/include/client/: client.hpp
Chat/include/server/: chatserver.hpp  chatservice.hpp
Chat/include/server/database/: database.h
Chat/include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemsgmodel.hpp  user.hpp  usermodel.hpp
Chat/include/server/redis/: redis.hpp
Chat/src/client/: CMakeLists.txt  client.cpp  main.cpp
Chat/src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
Chat/src/server/database/: database.cpp
Chat/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
Chat/src/server/redis/: redis.cpp
MUDUOTRY/: CMakeLists.txt  muduo_server.cpp
